--- a/config/yugabyte/test/range_write/yb_colocated_10inserts/RW_G1_insert_varying_composite_index.yaml
+++ b/config/yugabyte/test/range_write/yb_colocated_10inserts/RW_G1_insert_varying_composite_index.yaml
@@ -30,21 +30,8 @@ microbenchmark:
             - create table index_test_3 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
             - create table index_test_4 (id bigint, col_int_1 int, col_int_2 int, col_int_3 int, col_int_4 int, col_int_5 int, col_int_6 int, col_int_7 int, col_int_8 int, col_int_9 int, col_int_10 int, col_varchar_1 varchar(20), col_varchar_2 varchar(20), col_varchar_3 varchar(20), col_date text, col_boolean boolean, primary key (id asc))
             - create index index_test_2_idx1 on index_test_2(col_int_1 asc);
-            - create index index_test_3_idx1 on index_test_3(col_int_1 asc);
-            - create index index_test_3_idx2 on index_test_3(col_int_2 asc);
-            - create index index_test_3_idx3 on index_test_3(col_int_3 asc);
-            - create index index_test_3_idx4 on index_test_3(col_int_4 asc);
-            - create index index_test_3_idx5 on index_test_3(col_int_5 asc);
-            - create index index_test_4_idx1 on index_test_4(col_int_1 asc);
-            - create index index_test_4_idx2 on index_test_4(col_int_2 asc);
-            - create index index_test_4_idx3 on index_test_4(col_int_3 asc);
-            - create index index_test_4_idx4 on index_test_4(col_int_4 asc);
-            - create index index_test_4_idx5 on index_test_4(col_int_5 asc);
-            - create index index_test_4_idx6 on index_test_4(col_int_6 asc);
-            - create index index_test_4_idx7 on index_test_4(col_int_7 asc);
-            - create index index_test_4_idx8 on index_test_4(col_int_8 asc);
-            - create index index_test_4_idx9 on index_test_4(col_int_9 asc);
-            - create index index_test_4_idx10 on index_test_4(col_int_10 asc);
+            - create index index_test_3_idx1 on index_test_3(col_int_1 asc, col_int_2 asc);
+            - create index index_test_4_idx1 on index_test_4(col_int_1 asc, col_int_2 asc, col_int_3 asc, col_int_4 asc, col_int_5 asc);
         cleanup:
             - drop table if exists index_test_1;
             - drop table if exists index_test_2;
@@ -53,6 +40,7 @@ microbenchmark:
         loadRules:
             -   table: index_test_
                 count: 4
+
                 rows: 1000000
                 columns:
                     -   name: id
@@ -80,12 +68,13 @@ microbenchmark:
                     -   name: col_boolean
                         util: RandomBoolean
         executeRules:
-            -   workload: RW_G2_no_index
+            -   workload: RW_G1_0_column_composite_index_test
                 run:
-                    -   name: Insert_without_index_test
+                    -   name: Insert_0_column_composite_index_test
                         weight: 100
                         queries:
                             -   query: INSERT INTO index_test_1 (id, col_int_1, col_int_2, col_int_3, col_int_4, col_int_5, col_int_6, col_int_7, col_int_8, col_int_9, col_int_10, col_varchar_1, col_varchar_2, col_varchar_3, col_date, col_boolean) values (?, ?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+                                count: 10
                                 bindings:
                                     -   util: PrimaryIntGen
                                         params: [ 1000001, 100000000 ]
@@ -96,12 +85,13 @@ microbenchmark:
                                         count: 4
                                         params: [ 20, 20 ]
                                     -   util: RandomBoolean
-            -   workload: RW_G2_1_index_test
+            -   workload: RW_G1_1_column_composite_index_test
                 run:
-                    -   name: Insert_with_1_index_test
+                    -   name: Insert_1_column_composite_index_test
                         weight: 100
                         queries:
                             -   query: INSERT INTO index_test_2 (id, col_int_1, col_int_2, col_int_3, col_int_4, col_int_5, col_int_6, col_int_7, col_int_8, col_int_9, col_int_10, col_varchar_1, col_varchar_2, col_varchar_3, col_date, col_boolean) values (?, ?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+                                count: 10
                                 bindings:
                                     -   util: PrimaryIntGen
                                         params: [ 1000001, 100000000 ]
@@ -112,12 +102,13 @@ microbenchmark:
                                         count: 4
                                         params: [ 20, 20 ]
                                     -   util: RandomBoolean
-            -   workload: RW_G2_5_index_test
+            -   workload: RW_G1_2_column_composite_index_test
                 run:
-                    -   name: Insert_with_5_index_test
+                    -   name: Insert_column_composite_index_test
                         weight: 100
                         queries:
                             -   query: INSERT INTO index_test_3 (id, col_int_1, col_int_2, col_int_3, col_int_4, col_int_5, col_int_6, col_int_7, col_int_8, col_int_9, col_int_10, col_varchar_1, col_varchar_2, col_varchar_3, col_date, col_boolean) values (?, ?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+                                count: 10
                                 bindings:
                                     -   util: PrimaryIntGen
                                         params: [ 1000001, 100000000 ]
@@ -128,12 +119,13 @@ microbenchmark:
                                         count: 4
                                         params: [ 20, 20 ]
                                     -   util: RandomBoolean
-            -   workload: RW_G2_10_index_test
+            -   workload: RW_G1_5_column_composite_index_test
                 run:
-                    -   name: Insert_with_10_index_test
+                    -   name: Insert_column_composite_index_test
                         weight: 100
                         queries:
                             -   query: INSERT INTO index_test_4 (id, col_int_1, col_int_2, col_int_3, col_int_4, col_int_5, col_int_6, col_int_7, col_int_8, col_int_9, col_int_10, col_varchar_1, col_varchar_2, col_varchar_3, col_date, col_boolean) values (?, ?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+                                count: 10
                                 bindings:
                                     -   util: PrimaryIntGen
                                         params: [ 1000001, 100000000 ]
