--- a/config/yugabyte/test/range_write/yb_colocated/RW_G5_update_varying_composite_index.yaml
+++ b/config/yugabyte/test/range_write/yb_colocated/RW_G5_update_varying_composite_index.yaml
@@ -19,7 +19,7 @@ works:
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
     properties:
-        setAutoCommit: false
+        setAutoCommit: true
         create:
             - drop table if exists index_test_1;
             - drop table if exists index_test_2;
