--- a/config/yugabyte/test/range_write/yb_colocated/RW_G7_update_varying_pk_columns.yaml
+++ b/config/yugabyte/test/range_write/yb_colocated/RW_G7_update_varying_pk_columns.yaml
@@ -19,7 +19,7 @@ works:
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
     properties:
-        setAutoCommit: false
+        setAutoCommit: true
         create:
             - drop table if exists table_test_1;
             - drop table if exists table_test_2;
